feat: Complete GitHub & Copilot integration with 5 new exploits
✨ New Features:
- Google Studio Hack: Bypass Copilot message limits via browser automation
- The Sniper: Reddit lead generation with buying intent scoring (0-10)
- Fork Evolution: Analyze repository forks to discover user-wanted features
- Twin Mimicry: Extract mental models from elite developer git history
- Viral Radar: Social media trend scanning (X/Instagram/Google Trends)

🔧 GitHub Integration:
- GitHub API client with rate limit handling (60→5000/hour with token)
- 5 GitHub Actions workflows for daily automation
- Vault encrypted storage for API keys
- Environment variables support (.env.example)
- Settings UI with GitHub key management

🤖 Copilot Integration:
- Copilot instructions file (.github/copilot-instructions.md - 371 lines)
- TypeScript strict mode compilation (✅ PASSING)
- Architecture validation & quality pipeline
- Feature isolation enforcement

🎨 UI Updates:
- Features dropdown expanded from 10 to 15 items
- All 5 new exploits visible in header dropdown
- Settings modal updated with vault interface

📚 Documentation:
- GITHUB_COPILOT_INTEGRATION.md (complete integration guide)
- NEW_EXPLOITS_IMPLEMENTATION.md (5 exploits documentation)
- INTEGRATION_STATUS.md (verification checklist)

🚀 GitHub Actions Workflows:
- daily-scout.yml (existing)
- reddit-sniper.yml (daily 8 AM UTC)
- viral-radar.yml (daily 10 AM UTC)
- fork-evolution.yml (manual trigger)
- twin-mimicry.yml (manual trigger)

📦 npm Scripts Added:
- npm run studio (Google Studio bypass)
- npm run sniper (Reddit lead gen)
- npm run forks (Fork analysis)
- npm run twin (Developer profiling)
- npm run viral (Trend scanning)

All TypeScript compilation passing with strict mode enabled.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "scout:report": "npx tsx src/lib/report-generator.ts",
     "scout:blue-ocean": "npx tsx -e \"import('./src/lib/scout.ts').then(m => m.scanBlueOcean(process.env.TOPIC || 'developer-tools'))\"",
     "brief": "tsx scripts/daily-brief.ts",
-    "brief:help": "tsx scripts/daily-brief.ts --help"
+    "brief:help": "tsx scripts/daily-brief.ts --help",
+    "studio": "tsx src/lib/google-studio-hack.ts",
+    "sniper": "tsx src/lib/reddit-sniper.ts",
+    "forks": "tsx src/lib/fork-evolution.ts",
+    "twin": "tsx src/lib/twin-mimicry.ts",
+    "viral": "tsx src/lib/viral-radar.ts"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
